[gd_scene load_steps=4 format=3 uid="uid://dt4rd2lfdq7ys"]

[ext_resource type="Script" path="res://Scripts/ability_scene.gd" id="1_xfejk"]
[ext_resource type="Texture2D" uid="uid://d3ilip2fi1c28" path="res://Sprites/New Piskel (5).png" id="2_5ebmo"]
[ext_resource type="Texture2D" uid="uid://doop70hxo4p5b" path="res://Sprites/New Piskel (6).png" id="3_3vlpf"]

[node name="AbilityScene" type="Node2D"]
script = ExtResource("1_xfejk")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720

[node name="I" type="Button" parent="."]
offset_left = 149.0
offset_top = 235.0
offset_right = 157.0
offset_bottom = 243.0
scale = Vector2(15, 15)
flat = true

[node name="Sprite2D" type="Sprite2D" parent="I"]
position = Vector2(5.06667, 6.33333)
scale = Vector2(0.73, 0.73)
texture = ExtResource("2_5ebmo")

[node name="II" type="Button" parent="."]
offset_left = 836.0
offset_top = 235.0
offset_right = 844.0
offset_bottom = 243.0
scale = Vector2(15, 15)
flat = true

[node name="Sprite2D" type="Sprite2D" parent="II"]
position = Vector2(4.53333, 5.93333)
scale = Vector2(0.73, 0.73)
texture = ExtResource("3_3vlpf")

[node name="Label" type="Label" parent="."]
offset_left = 254.0
offset_top = 74.0
offset_right = 518.0
offset_bottom = 108.015
scale = Vector2(2.28, 2.28)
text = "SELECT  AN  ABILITY :"

[node name="Label2" type="Label" parent="."]
offset_left = 143.0
offset_top = 467.0
offset_right = 163.0
offset_bottom = 527.0
scale = Vector2(1.25, 1.5)
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 169

[connection signal="mouse_entered" from="I" to="." method="_on_i_mouse_entered"]
[connection signal="mouse_exited" from="I" to="." method="_on_i_mouse_exited"]
[connection signal="pressed" from="I" to="." method="_on_i_pressed"]
[connection signal="mouse_entered" from="II" to="." method="_on_ii_mouse_entered"]
[connection signal="mouse_exited" from="II" to="." method="_on_ii_mouse_exited"]
[connection signal="pressed" from="II" to="." method="_on_ii_pressed"]
